minor bug fixing

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "@nativescript/core": "~7.0.0",
     "@nativescript/theme": "~2.3.0",
-    "nativescript-appversion": "^1.4.4"
+    "nativescript-appversion": "^1.4.4",
+    "nativescript-menu": "^1.1.7"
   },
   "devDependencies": {
     "@nativescript/android": "7.0.1",
