--- a/App_Resources/iOS/build.xcconfig
+++ b/App_Resources/iOS/build.xcconfig
@@ -3,5 +3,6 @@
 // CODE_SIGN_IDENTITY = iPhone Distribution
 // To build for device with Xcode 8 you need to specify your development team. More info: https://developer.apple.com/library/prerelease/content/releasenotes/DeveloperTools/RN-Xcode/Introduction.html
 // DEVELOPMENT_TEAM = YOUR_TEAM_ID;
+EXCLUDED_ARCHS[sdk=iphonesimulator*] = arm64
 ASSETCATALOG_COMPILER_APPICON_NAME = AppIcon;
 VALIDATE_WORKSPACE = YES;
